test/errors/list/index_value_error.np
l= [1, 2]
l.index(3)
